# Projektgruppe_Hypersuccint_Trees

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
example_service/: CMakeLists.txt  example_service.cpp
include/pht/: bitvector_utils.h  hst_node.h  hst_output.h  hypersuccinct_tree.h  hypersuccinct_tree_factory.h  logger.h  node.h  pht_export.h  timer.h  unordered_tree.h  xml_reader.h
python/: CMakeLists.txt
src/: bitvector_utils.cpp  hypersuccinct_tree.cpp  xml_reader.cpp
tests/: CMakeLists.txt
